syntax = "proto3";

package proto.aws.v1;

option go_package = "github.com/openkcm/keystore-plugins/pkg/proto";

message AWSKeyAccessData {
  string key_arn = 10;
  string trust_anchor_arn = 20;
  string profile_arn = 30;
  string role_arn = 40;
}
